<resources>
    <string name="app_name">Chants Journal</string>
    <string name="add_mantra">Add Mantra</string>
    <string name="enter_mantra">Enter the mantra</string>
    <string name="no_mantras">No Mantras</string>
    <string name="select_mantra">Select Your Mantra</string>
    <string name="save_mantra">Save Mantra</string>
    <string name="mantra">Mantra</string>
    <string name="new_mantra">New Mantra</string>
    <string name="set_goal">Set Your Goal</string>
    <string name="total_malas">Total Number of Malas (eg. 1500)</string>
    <string name="done_for_day_title">Well done.</string>
    <string name="done_for_day_content">Do you wish to continue chanting or are you done for the day? </string>
    <string name="help_text">A mantra (Sanskrit: मन्त्र) is a sacred utterance, a numinous sound, a syllable,
        word or phonemes, or group of words in Sanskrit believed to have psychological and spiritual powers.
        They are typically melodic, mathematically structured meters, believed to be resonant with numinous qualities.
        \n\nAt its simplest, the word ॐ (Aum, Om) serves as a mantra, also known as the source of all mantras.
        \n\nEach mantra carries a certain amount of positive vibration, which when repeated regularly over a period of time can generate tranquil
        emotions, peace of mind and bestow oneself with sound body and health.\n\n
        ✧✧✧
        \n\nStart by adding your personal list of mantras, with each mantra having a defined chanting goal.
    </string>

    <string name="mantra_note">A <b>Mala</b> is a sacred rosary in the form of a garland used for
        keeping count while reciting, chanting, or mentally repeating a mantra or the name
        of a deity. This <b><i>sādhanā</i></b> (practice) is known in Sanskrit as <b>Japa</b>.
        A typical Mala is generally made with 18, 27, 54 or 108 beads.\n\nAccording to <b><i>Védās</i></b>
        (Ancient Indian Texts), the recommended amount of Japa required in the current epoch i.e. <b><i>"Kaliyuga"</i></b>,
        for a Mantra to become fruitful is given below.\n\n
        <b>⦿ Japa</b> - 1,25,000\n
        <b>⦿ Hawan</b> - 12,500 \n
        <b>⦿ Tarpan</b> - 1,250\n
        <b>⦿ Maarjan</b> - 125\n
        <b>⦿ Brahman Bhoj</b> - 13\n\nAlternatively, one can gain similar benefits by piously chanting
        an amount equivalent to the combined total of all the above, which turns out to be <b>1,38,888</b>
        approximately.\n\nMoreover, in order to nullify the effects of any erroneous chants, it is
        recommended to add a buffer amount to the sum and make it a total of <b>1,50,000</b> chants.\n\nNow,
        if we consider an ideal <i>Japa Mala</i> to consist of <b>108 beads</b>, we must diligently complete a total of
        <b>1,500 Malas</b> in order to successfully reach an ideal chanting goal for a given Mantra.
    </string>

    <string name="about_text"><b>Developed by:</b>
        \n\nAtri Tripathi
        \nVersion: v1.0
        \n\n✧✧✧
        \n\n<b>Ⓒ</b> Atri Tripathi, All rights reserved.</string>
    <string name="empty_mantra_list_text">It\'s a bit lonely here...</string>
    <string name="get_started_by_adding_a_mantra">Get started by adding a mantra</string>
    <string name="mantra_details">Mantra Details</string>
    <string name="sample_mantra_name">Aum Namah Shivaya</string>
    <string name="chanting_goal">Chanting Goal:</string>
    <string name="malas_completed">Malas Completed:</string>
    <string name="done_chanting">Done Chanting</string>
    <string name="note_heading">Note</string>
    <string name="share">Share</string>
    <string name="donate">Donate</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="add_mantra_tutorial">Get started by adding a Mantra \nby clicking on the \"Add Mantra\" button.</string>
    <string name="welcome_tutorial">Welcome! \n\nThis app allows you to keep a digital \nrecord of your personal list of Mantras.</string>
    <string name="delete_mantra_tutorial">\"Swipe Left\" on a Mantra to delete it.</string>
    <string name="help_button_tutorial">Press the \"Help\" button to know more about Mantras.</string>
</resources>
