<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alternate_orange"
    android:clickable="true"
    android:focusable="true"
    tools:context=".NewMantraActivity">

    <EditText
        android:id="@+id/et_enter_mantra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/entry_rectangle"
        android:cursorVisible="true"
        android:hint="@string/enter_mantra"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:paddingBottom="16dp"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/save_mantra_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/save_mantra_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_rounded"
        android:paddingBottom="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:text="@string/save_mantra"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/new_mantra"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="52sp"
        app:fontFamily="@font/samkaran"
        app:layout_constraintBottom_toTopOf="@+id/et_enter_mantra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/set_goal"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_mantra"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/divider4"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/et_enter_mantra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintBottom_toTopOf="@+id/save_mantra_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="Total Number of Malas"
            android:inputType="number"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="20sp"
            android:theme="@style/MantraEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintBottom_toTopOf="@+id/save_mantra_button"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="6"
            android:focusable="false"
            android:hint="Start Date"
            android:inputType="date"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="20sp"
            android:theme="@style/MantraEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/HintText"
        app:layout_constraintBottom_toTopOf="@+id/save_mantra_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="6"
            android:focusable="false"
            android:hint="End Date"
            android:inputType="date"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="20sp"
            android:theme="@style/MantraEditText" />
    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>